fix z-index in the header menu

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -70,6 +70,7 @@
     width: 200px;
     transition: 0.2s ease;
     font-size: 0.9rem;
+    z-index: 10;
 
     &:hover {
       box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.7);
